--- a/bidding/res/layout/item_bidding.xml
+++ b/bidding/res/layout/item_bidding.xml
@@ -41,7 +41,7 @@
                     android:id="@+id/biddingid"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="88888888"
+                    android:text=""
                     android:textColor="@color/BIDDING_TXT_COLOR"
                     android:textSize="@dimen/F3"
                     android:textStyle="bold" />
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:text="未提交"
+                android:text=""
                 android:textColor="@color/BIDDING_TXT_COLOR"
                 android:textSize="@dimen/F3"
                 android:textStyle="bold" />
@@ -74,108 +74,151 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_rectangle_white"
-        android:gravity="left|center_vertical"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/interval_C"
-        android:paddingLeft="@dimen/interval_A"
-        android:paddingRight="@dimen/interval_A"
-        android:paddingTop="@dimen/interval_C">
-
-        <FrameLayout
-            android:id="@+id/frame_picture"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:clickable="true">
-
-            <ImageView
-                android:id="@+id/pictures"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitXY" />
-
-            <LinearLayout
-                android:id="@+id/bg_pictures"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@mipmap/pic_num"
-                android:gravity="bottom|right"
-                android:orientation="vertical"
-                android:paddingBottom="4dp"
-                android:paddingRight="4dp"
-                android:visibility="gone">
-
-                <TextView
-                    android:id="@+id/num_pictures"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:textColor="@color/MALL_C8"
-                    android:textSize="@dimen/F5" />
-
-            </LinearLayout>
-        </FrameLayout>
-
+        android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/interval_A"
+            android:background="@null"
             android:gravity="left|center_vertical"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/interval_C"
+            android:paddingLeft="@dimen/interval_A"
+            android:paddingRight="@dimen/interval_A"
+            android:paddingTop="@dimen/interval_C">
 
-            <TextView
-                android:id="@+id/topic"
+            <FrameLayout
+                android:id="@+id/frame_picture"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ellipsize="end"
+                android:clickable="true">
+
+                <ImageView
+                    android:id="@+id/pictures"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:adjustViewBounds="true"
+                    android:scaleType="fitXY" />
+
+                <LinearLayout
+                    android:id="@+id/bg_pictures"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@mipmap/pic_num"
+                    android:gravity="bottom|right"
+                    android:orientation="vertical"
+                    android:paddingBottom="4dp"
+                    android:paddingRight="4dp"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/num_pictures"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="@color/MALL_C8"
+                        android:textSize="@dimen/F5" />
+
+                </LinearLayout>
+            </FrameLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/interval_A"
                 android:gravity="left|center_vertical"
-                android:singleLine="true"
-                android:text="要一批漏电开关"
-                android:textColor="@color/BASE_TEXT_COLOR"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/topic"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:singleLine="true"
+                    android:text=""
+                    android:textColor="@color/BASE_TEXT_COLOR"
+                    android:textSize="@dimen/F3"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/brand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/interval_D"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:singleLine="true"
+                    android:text=""
+                    android:textColor="@color/BASE_TEXT_COLOR"
+                    android:textSize="@dimen/F3" />
+
+                <TextView
+                    android:id="@+id/num"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/interval_D"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:singleLine="true"
+                    android:text=""
+                    android:textColor="@color/BASE_TEXT_COLOR"
+                    android:textSize="@dimen/F3" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/interval_D"
+                    android:ellipsize="end"
+                    android:gravity="left|center_vertical"
+                    android:singleLine="true"
+                    android:text=""
+                    android:textColor="@color/BASE_TEXT_COLOR"
+                    android:textSize="@dimen/F3" />
+
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/returnState"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:gravity="left|center_vertical"
+            android:orientation="horizontal"
+            android:paddingBottom="@dimen/interval_D"
+            android:paddingLeft="@dimen/interval_A"
+            android:paddingRight="@dimen/interval_A"
+            android:paddingTop="@dimen/interval_D"
+            android:visibility="gone">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left|center_vertical"
+                android:text="退回说明："
+                android:textColor="@color/MALL_C1"
                 android:textSize="@dimen/F3"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/brand"
+                android:id="@+id/returnState_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/interval_D"
-                android:ellipsize="end"
                 android:gravity="left|center_vertical"
-                android:singleLine="true"
-                android:text="兰博基尼牌漏电开关"
-                android:textColor="@color/BASE_TEXT_COLOR"
+                android:singleLine="false"
+                android:text=""
+                android:textColor="@color/MALL_C1"
                 android:textSize="@dimen/F3" />
-
-            <TextView
-                android:id="@+id/num"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/interval_D"
-                android:ellipsize="end"
-                android:gravity="left|center_vertical"
-                android:singleLine="true"
-                android:text="99999 箱"
-                android:textColor="@color/BASE_TEXT_COLOR"
-                android:textSize="@dimen/F3" />
-
-            <TextView
-                android:id="@+id/date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/interval_D"
-                android:ellipsize="end"
-                android:gravity="left|center_vertical"
-                android:singleLine="true"
-                android:text="2015.08.18 - 2015.08.30"
-                android:textColor="@color/BASE_TEXT_COLOR"
-                android:textSize="@dimen/F3" />
-
 
         </LinearLayout>
 
+
     </LinearLayout>
+
 
 </LinearLayout>
 
