--- a/bidding/res/layout/item_quote.xml
+++ b/bidding/res/layout/item_quote.xml
@@ -38,7 +38,32 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="竞价截止日期:"
+                        android:text="单号："
+                        android:textColor="@color/BIDDING_TXT_COLOR"
+                        android:textSize="@dimen/F3"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/biddingid"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=""
+                        android:textColor="@color/BIDDING_TXT_COLOR"
+                        android:textSize="@dimen/F3"
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/interval_D"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="竞价截止日期："
                         android:textColor="@color/BIDDING_TXT_COLOR"
                         android:textSize="@dimen/F3"
                         android:textStyle="bold" />
@@ -63,7 +88,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="期望交货日期:"
+                        android:text="期望交货日期："
                         android:textColor="@color/BIDDING_TXT_COLOR"
                         android:textSize="@dimen/F3"
                         android:textStyle="bold" />
@@ -88,7 +113,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="税票类型:"
+                        android:text="税票类型："
                         android:textColor="@color/BIDDING_TXT_COLOR"
                         android:textSize="@dimen/F3"
                         android:textStyle="bold" />
@@ -113,7 +138,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="其它要求:"
+                        android:text="其它要求："
                         android:textColor="@color/BIDDING_TXT_COLOR"
                         android:textSize="@dimen/F3"
                         android:textStyle="bold" />
