--- a/bidding/res/layout/item_bidding.xml
+++ b/bidding/res/layout/item_bidding.xml
@@ -133,9 +133,8 @@
                     android:id="@+id/topic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:ellipsize="end"
                     android:gravity="left|center_vertical"
-                    android:singleLine="true"
+                    android:singleLine="false"
                     android:text=""
                     android:textColor="@color/BASE_TEXT_COLOR"
                     android:textSize="@dimen/F3"
@@ -146,9 +145,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/interval_D"
-                    android:ellipsize="end"
                     android:gravity="left|center_vertical"
-                    android:singleLine="true"
+                    android:singleLine="false"
                     android:text=""
                     android:textColor="@color/BASE_TEXT_COLOR"
                     android:textSize="@dimen/F3" />
@@ -158,7 +156,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/interval_D"
-                    android:ellipsize="end"
                     android:gravity="left|center_vertical"
                     android:singleLine="true"
                     android:text=""
@@ -170,9 +167,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/interval_D"
-                    android:ellipsize="end"
                     android:gravity="left|center_vertical"
-                    android:singleLine="true"
+                    android:singleLine="false"
                     android:text=""
                     android:textColor="@color/BASE_TEXT_COLOR"
                     android:textSize="@dimen/F3" />
