--- a/bidding/res/layout/common_bidding.xml
+++ b/bidding/res/layout/common_bidding.xml
@@ -326,6 +326,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/interval_B"
                     android:background="@null"
+                    android:hint="（选填）"
                     android:gravity="center_vertical"
                     android:singleLine="false"
                     android:textSize="@dimen/txtsize_bidding_add" />
@@ -587,6 +588,7 @@
             android:layout_gravity="center_vertical"
             android:background="@null"
             android:gravity="center_vertical"
+            android:hint="（选填）"
             android:singleLine="false"
             android:textSize="@dimen/txtsize_bidding_add" />
 
